# core-rust-qti

./: .env.example  .gitignore  Cargo.toml
migrations/: 20250318053006_core_table.down.sql  20250318053006_core_table.up.sql
src/: lib.rs  settings.rs
src/cli/: auth.rs  db.rs
src/core/: db.rs  mod.rs  security.rs  session.rs  sqlx_utils.rs  test_utils.rs  utils.rs
src/factory/: group.rs  mod.rs  permission.rs  permission_attribute.rs  permission_attribute_list.rs  role.rs  user.rs  user_profile.rs
src/model/: group.rs  group_permission.rs  mod.rs  permission.rs  permission_attribute.rs  permission_attribute_list.rs  role.rs  role_permission.rs  user.rs  user_group_roles.rs  user_permission.rs  user_profile.rs
src/repository/: group.rs  group_permission.rs  mod.rs  permission.rs  permission_attribute.rs  permission_attribute_list.rs  role.rs  role_permission.rs  user.rs  user_group_roles.rs  user_permission.rs
src/route/: auth.rs  auth_test.rs  group.rs  group_permission.rs  group_permission_test.rs  group_test.rs  mod.rs  permission.rs  permission_attribute.rs  permission_attribute_test.rs  permission_test.rs  role.rs  role_permission.rs  role_permission_test.rs  role_test.rs  user.rs  user_permission.rs  user_permission_test.rs  user_test.rs
src/schema/: auth.rs  common.rs  group.rs  group_permission.rs  mod.rs  permission.rs  permission_attribute.rs  role.rs  role_permission.rs  user.rs  user_permission.rs
