[package]
name = "core_rust_qti"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
anyhow = "1.0.97"
argon2 = "0.5.3"
chrono = { version = "0.4.40", features = ["serde"]}
clap = { version = "4.5.32", features = ["derive"]}
clap_derive = "4.5.32"
dotenvy = "0.15.7"
envy = "0.4.2"
fake = { version = "4.0.0", features = ["chrono", "chrono-tz", "derive", "uuid"]}
jsonwebtoken = "9.3.1"
poem = { version = "3.1.7", features = ["test"]}
poem-openapi = { version = "5.1.8", features = ["swagger-ui"]}
r2d2 = "0.8.10"
redis = { version = "0.29.1", features = ["r2d2"]}
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["chrono", "macros", "postgres", "runtime-tokio", "uuid"]}
tokio = { version = "1.44.1", features = ["full"]}
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
uuid = {version = "1.16.0", features = ["serde", "std", "v7"]}
